<resources>
    <string name="app_name">Алкогольный калькулятор</string>
    <string name="title_activity_forth_screen">ForthScreen</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">"Settings"</string>
    <string name="hello">"Привет!"</string>
    <string name="we_need_info">"Нам нужно\nузнать о тебе \nпобольше"</string>
    <string name="next">"Далее"</string>
    <string name="say_weight_sex">"Скажи свой вес\nи пол"</string>
    <string name="you_can_use">"Теперь ты можешь \n перейти к\nкалькулятору"</string>
    <string name="lets_go">Поехали</string>
    <string name="sex_W">Ж</string>
    <string name="sex_M">М</string>
    <string name="input_name">Твой вес</string>
    <string name="bookmark_placeholder">"Напиши что-нибудь.\nНапример: \"не звони…\""</string>
    <string name="done">Готово</string>
    <string name="change_weight_sex">Изменение пола и веса</string>
    <string name="made_by_mvp">Made By MVP</string>
    <string name="notes">Заметки</string>
    <string name="calculate">Рассчитать</string>
    <string name="strength">Крепость в %</string>
    <string name="you_drink">Ты выпил(а):</string>
    <string name="what_strength">Какая крепость \n напитка?</string>
    <string name="what_volume">Сколько ты выпил(а)?</string>
    <string name="have_you_eat">Ты покушал(а)?</string>
    <string name="Yes">Да</string>
    <string name="No">Нет</string>
    <string name="save_to_diary">Записать в дневник?</string>
    <string name="you_have">У тебя:</string>
    <string name="back">Назад</string>
    <string name="sober_time">Время отрезвления:</string>
    <string name="save">Сохранить</string>
    <string name="per_mile">%1$.2f&#8240;</string>
    <string name="sober_hours">%1$.1f часа</string>
    <string name="sober_hours_digit">%1$d ч.</string>
    <string name="sober_minutes_digit">%1$d мин.</string>
    <string name="sober_hours_minutes">%1$d ч. %2$d мин.</string>
    <string name="drink_result_time_info">%1$d мл \nКрепостью  %2$d%%</string>
    <string name="to_menu">В меню</string>
    <string name="in_percent">В процентах</string>
    <string name="in_mls">В миллилитрах</string>
    <string name="to_which_condition">До какого состояния?</string>
    <string name="condition">Состояние:</string>
    <string name="will_you_eat">Будешь закусывать?</string>
    <string name="you_will_sober">Протрезвеешь через:</string>
    <string name="you_will_have">У тебя будет:</string>
    <string name="you_need_to_drink">Надо выпить:</string>
    <string name="creators">"Программа была создана командой разработчиков MVP в следующем составе:"</string>
    <string name="consistance">Михаил Дронский\n Иван Зайкин\n Павел Белитченко</string>
    <string name="responsibility">Команда не несёт ответственности за употребление пользователями спиртных напитков.</string>

    <string-array name="conditions">
        <item>Согреться (0.2&#8240;)</item>
        <item>Расслабиться (0.3&#8240;)</item>
        <item>Веселье пошло (0.6&#8240;)</item>
        <item>Танцуют все (1&#8240;)</item>
        <item>Рубикон перейдён (2&#8240;)</item>
        <item>Кран потёк (3&#8240;)</item>
        <item>К праотцам (4&#8240;)</item>
        <item>Вы труп (5&#8240;)</item>
    </string-array>

    <string-array name="conditions_scale"> <!--распарсить в нужный формат-->
        <item>0.2</item>
        <item>0.3</item>
        <item>0.6</item>
        <item>1.0</item>
        <item>2.0</item>
        <item>3.0</item>
        <item>4.0</item>
        <item>5.0</item>
        <item>6.0</item>
    </string-array>

</resources>
