<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeAttrs"
    android:background="@mipmap/bg_change_screen">

    <TextView
        android:id="@+id/textView"
        style="@style/AppTheme.TextView.Hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"

        android:text="@string/change_weight_sex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/r_sex2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:orientation="horizontal"
        android:checkedButton="@id/r_sex_w"
        app:layout_constraintBottom_toTopOf="@+id/b_next2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_weight2">

        <RadioButton
            android:id="@+id/r_sex_w2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex_W"
            style="@style/AppTheme.RadioButton"/>

        <RadioButton
            android:id="@+id/r_sex_m2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:text="@string/sex_M"
            style="@style/AppTheme.RadioButton"
            app:layout_constraintBottom_toBottomOf="@+id/r_sex_w2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/r_sex_w2"
            app:layout_constraintVertical_bias="0.0" />

    </RadioGroup>

    <Button
        android:id="@+id/b_next2"
        style="@style/AppTheme.Button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="45dp"
        android:onClick="onBackClick"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r_sex2" />

    <EditText
        android:id="@+id/et_weight2"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginBottom="43dp"
        android:layout_marginTop="240dp"
        android:background="@drawable/bg_white_rect"
        android:ems="10"
        android:hint="@string/input_name"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/r_sex2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>