<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimeSober"
    android:background="@mipmap/bg_time_sober">

    <Button
        android:id="@+id/btn_time_sober_calculate"
        style="@style/AppTheme.Button"
        android:onClick="onTimeSoberCalculateClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:width="250dp"
        android:height="50dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_marginBottom="150dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/bg_white_rect"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_which_strength"
            style="@style/AppTheme.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/invisible"
            android:ems="10"
            android:layout_marginTop="32dp"
            android:padding="2dp"
            android:text="@string/what_strength"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="688dp" />

        <EditText
            android:id="@+id/et_strength"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_white_rect_bordered"
            android:ems="10"
            android:inputType="number"
            android:padding="10dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.549"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="225dp" />

        <TextView
            android:id="@+id/tv_which_volume"
            style="@style/AppTheme.TextView"
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/invisible"
            android:ems="10"
            android:padding="2dp"
            android:text="@string/what_volume"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="688dp" />


        <EditText
            android:id="@+id/et_volume"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_white_rect_bordered"
            android:ems="10"
            android:inputType="number"
            android:padding="10dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.549"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="225dp" />

        <TextView
            android:id="@+id/is_eat"
            style="@style/AppTheme.TextView"
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/invisible"
            android:ems="10"
            android:padding="2dp"
            android:text="@string/have_you_eat"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="688dp" />

        <RadioGroup
            android:id="@+id/rg_have_eaten"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_eaten_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTheme.RadioButton"
                android:layout_marginStart="64dp"
                android:text="@string/Yes"/>

            <RadioButton
                android:id="@+id/rb_eaten_no"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/No"
                android:layout_marginStart="56dp"
                style="@style/AppTheme.RadioButton"/>
        </RadioGroup>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>